# sfrpg

./: CMakeCache.txt  CMakeLists.txt  README.md
chat/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  MessageQueue.cpp  MessageQueue.hpp  main.cpp
src/: main.cpp
src/client/: Client.cpp  Client.h  TcpClient.cpp  TcpClient.h  UdpClient.cpp  UdpClient.h  main.cpp  tcpMain.cpp
src/common/: Bitmask.h  C_Base.h  C_Client.h  C_Collidable.h  C_Control.cpp  C_Controller.h  C_Health.h  C_Movable.h  C_Name.h  C_Position.h  C_State.h  C_TimedComponentBase.h  Communicator.h  DbConnector.cpp  DbConnector.h  ECS_Types.h  EntityEvents.h  EntityMessages.h  EntitySnapshot.cpp  EntitySnapshot.h  Entity_Manager.cpp  Entity_Manager.h  Event_Queue.h  Message.h  MessageData.cpp  MessageData.h  MessageHandler.h  NetworkDefinitions.h  Observer.h  PacketTypes.cpp  PacketTypes.h  ResourceManager.h  S_Base.cpp  S_Base.h  S_Control.h  S_State.cpp  S_State.h  System_Manager.cpp  System_Manager.h  UserData.cpp  (+2 more)
src/server/: C_Attacker.h  Map.cpp  Map.h  NetSettings.h  S_Collision.cpp  S_Collision.h  S_Combat.cpp  S_Combat.h  S_Movement.cpp  S_Movement.h  S_Network.cpp  S_Network.h  S_Timers.cpp  S_Timers.h  Server.cpp  Server.h  Server_Entity_Manager.cpp  Server_Entity_Manager.h  Server_System_Manager.cpp  Server_System_Manager.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h  World.cpp  World.h  main.cpp  tcpMain.cpp
